force-app/main/default/objects/Executive_Profile__c/Executive_Profile__c.object-meta.xml
<CustomObject>
    <label>Executive Profile</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Executive Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>