force-app/main/default/objects/Executive_Profile__c/fields/Adopter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Profile__c</fullName>
    <label>Adopter Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Innovator</fullName>
            </value>
            <value>
                <fullName>Early adopter</fullName>
            </value>
            <value>
                <fullName>Early majority</fullName>
            </value>
            <value>
                <fullName>Late majority</fullName>
            </value>
            <value>
                <fullName>Laggards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>