force-app/main/default/objects/Executive_Profile__c/fields/CAD_CAM__c.field-meta.xml
<CustomField>
    <fullName>CAD_CAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAD/CAM</label>
    <type>Checkbox</type>
</CustomField>