force-app/main/default/objects/Executive_Profile__c/fields/Certain__c.field-meta.xml
<CustomField>
    <fullName>Certain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certain</label>
    <type>Checkbox</type>
</CustomField>