force-app/main/default/objects/Executive_Profile__c/fields/Communication_Engagement_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Engagement_Preference__c</fullName>
    <label>Communication Engagement Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Office Line</fullName>
            </value>
            <value>
                <fullName>Office Staff</fullName>
            </value>
            <value>
                <fullName>Handler (Manager, Spouse, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>