force-app/main/default/objects/Executive_Profile__c/fields/Complex_Cases__c.field-meta.xml
<CustomField>
    <fullName>Complex_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Cases</label>
    <type>Checkbox</type>
</CustomField>