force-app/main/default/objects/Executive_Profile__c/fields/Computer_Type__c.field-meta.xml
<CustomField>
    <fullName>Computer_Type__c</fullName>
    <label>Computer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAC</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>