force-app/main/default/objects/Executive_Profile__c/fields/DIEM__c.field-meta.xml
<CustomField>
    <fullName>DIEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DIEM</label>
    <type>Checkbox</type>
</CustomField>