force-app/main/default/objects/Executive_Profile__c/fields/Digital_System_Usage__c.field-meta.xml
<CustomField>
    <fullName>Digital_System_Usage__c</fullName>
    <label>Digital System Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Encode</fullName>
            </value>
            <value>
                <fullName>Zfx</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>