force-app/main/default/objects/Executive_Profile__c/fields/Edentulous__c.field-meta.xml
<CustomField>
    <fullName>Edentulous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edentulous</label>
    <type>Checkbox</type>
</CustomField>