force-app/main/default/objects/Executive_Profile__c/fields/Emerging_Regenative_Tech_Used__c.field-meta.xml
<CustomField>
    <fullName>Emerging_Regenative_Tech_Used__c</fullName>
    <label>Emerging Regenative Tech Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stem Cell</fullName>
            </value>
            <value>
                <fullName>Growth Factor</fullName>
            </value>
            <value>
                <fullName>Patient-Specific Products (3D Printing or Custom-Milled Grafts)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>