force-app/main/default/objects/Executive_Profile__c/fields/Esthetics__c.field-meta.xml
<CustomField>
    <fullName>Esthetics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esthetics</label>
    <type>Checkbox</type>
</CustomField>