force-app/main/default/objects/Executive_Profile__c/fields/Event_Preference__c.field-meta.xml
<CustomField>
    <fullName>Event_Preference__c</fullName>
    <label>Event Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lecture only</fullName>
            </value>
            <value>
                <fullName>Hands-On and Lecture</fullName>
            </value>
            <value>
                <fullName>Web-Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>