force-app/main/default/objects/Executive_Profile__c/fields/Eztetic__c.field-meta.xml
<CustomField>
    <fullName>Eztetic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eztetic</label>
    <type>Checkbox</type>
</CustomField>