force-app/main/default/objects/Executive_Profile__c/fields/Full_Arch_Fixed_Cases_Usage__c.field-meta.xml
<CustomField>
    <fullName>Full_Arch_Fixed_Cases_Usage__c</fullName>
    <label>Full-Arch Fixed Cases Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RevitaliZe</fullName>
            </value>
            <value>
                <fullName>DIEM</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>