force-app/main/default/objects/Executive_Profile__c/fields/Guided_Navigator__c.field-meta.xml
<CustomField>
    <fullName>Guided_Navigator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guided/Navigator</label>
    <type>Checkbox</type>
</CustomField>