force-app/main/default/objects/Executive_Profile__c/fields/Guided_Surgery_System_Usage__c.field-meta.xml
<CustomField>
    <fullName>Guided_Surgery_System_Usage__c</fullName>
    <label>Guided Surgery System Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Navigator</fullName>
            </value>
            <value>
                <fullName>TSV Guided</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>