force-app/main/default/objects/Executive_Profile__c/fields/Guided_Surgery_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Guided_Surgery_Use_Cases__c</fullName>
    <label>Guided Surgery Use Cases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Unit</fullName>
            </value>
            <value>
                <fullName>Multi Unit</fullName>
            </value>
            <value>
                <fullName>Full Arch</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>