force-app/main/default/objects/Executive_Profile__c/fields/HCP_Segment__c.field-meta.xml
<CustomField>
    <fullName>HCP_Segment__c</fullName>
    <label>HCP Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Rising Star</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>