force-app/main/default/objects/Executive_Profile__c/fields/Immediate_Loading__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Loading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Loading</label>
    <type>Checkbox</type>
</CustomField>