force-app/main/default/objects/Executive_Profile__c/fields/Immediate_Placement__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Placement</label>
    <type>Checkbox</type>
</CustomField>