force-app/main/default/objects/Executive_Profile__c/fields/Immediate_Restorative_Cases_Performed__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Restorative_Cases_Performed__c</fullName>
    <label>Immediate Restorative Cases Performed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Cases</fullName>
            </value>
            <value>
                <fullName>Multiple Unit Cases</fullName>
            </value>
            <value>
                <fullName>Full Arch Cases</fullName>
            </value>
            <value>
                <fullName>Not doing immediate cases</fullName>
            </value>
            <value>
                <fullName>No, but interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>