force-app/main/default/objects/Executive_Profile__c/fields/Intraoral_Scanner_Used__c.field-meta.xml
<CustomField>
    <fullName>Intraoral_Scanner_Used__c</fullName>
    <label>Intraoral Scanner Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>3Shape</fullName>
            </value>
            <value>
                <fullName>iTero</fullName>
            </value>
            <value>
                <fullName>Carestream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>