force-app/main/default/objects/Executive_Profile__c/fields/IOS_used_to_Scan_Encode_Healing_Abuts__c.field-meta.xml
<CustomField>
    <fullName>IOS_used_to_Scan_Encode_Healing_Abuts__c</fullName>
    <label>IOS used to Scan Encode Healing Abuts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>