force-app/main/default/objects/Executive_Profile__c/fields/Lecture_Lead_Time_Required__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Lead_Time_Required__c</fullName>
    <label>Lecture Lead Time Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>