force-app/main/default/objects/Executive_Profile__c/fields/Locator_System_Usage__c.field-meta.xml
<CustomField>
    <fullName>Locator_System_Usage__c</fullName>
    <label>Locator System Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locator only</fullName>
            </value>
            <value>
                <fullName>R-Tx</fullName>
            </value>
            <value>
                <fullName>F-Tx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>