force-app/main/default/objects/Executive_Profile__c/fields/Membrane__c.field-meta.xml
<CustomField>
    <fullName>Membrane__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membrane</label>
    <type>Checkbox</type>
</CustomField>