force-app/main/default/objects/Executive_Profile__c/fields/Minimally_Invasive_Sinus_Floor_Elevation__c.field-meta.xml
<CustomField>
    <fullName>Minimally_Invasive_Sinus_Floor_Elevation__c</fullName>
    <label>Minimally Invasive Sinus Floor Elevation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lateral Approach</fullName>
            </value>
            <value>
                <fullName>Crestal Approach</fullName>
            </value>
            <value>
                <fullName>Lateral &amp; Crestal Approach</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>