force-app/main/default/objects/Executive_Profile__c/fields/Novabone__c.field-meta.xml
<CustomField>
    <fullName>Novabone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Novabone</label>
    <type>Checkbox</type>
</CustomField>