force-app/main/default/objects/Executive_Profile__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NPI</label>
    <length>35</length>
    <type>Text</type>
</CustomField>