force-app/main/default/objects/Executive_Profile__c/fields/Osseotite__c.field-meta.xml
<CustomField>
    <fullName>Osseotite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Osseotite</label>
    <type>Checkbox</type>
</CustomField>