force-app/main/default/objects/Executive_Profile__c/fields/Periodontal_Disease__c.field-meta.xml
<CustomField>
    <fullName>Periodontal_Disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Periodontal Disease</label>
    <type>Checkbox</type>
</CustomField>