force-app/main/default/objects/Executive_Profile__c/fields/Pre_operative_Planing__c.field-meta.xml
<CustomField>
    <fullName>Pre_operative_Planing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-operative Planing</label>
    <type>Checkbox</type>
</CustomField>