force-app/main/default/objects/Executive_Profile__c/fields/Pre_operative_Planning_Systems_in_Use__c.field-meta.xml
<CustomField>
    <fullName>Pre_operative_Planning_Systems_in_Use__c</fullName>
    <label>Pre-operative Planning Systems in Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simplant</fullName>
            </value>
            <value>
                <fullName>Anatomage</fullName>
            </value>
            <value>
                <fullName>CoDiagnostix</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>