force-app/main/default/objects/Executive_Profile__c/fields/Presentation_Format_Preference__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Format_Preference__c</fullName>
    <label>Presentation Format Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4:3</fullName>
            </value>
            <value>
                <fullName>16:9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>