force-app/main/default/objects/Executive_Profile__c/fields/Presentation_Skills__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Skills__c</fullName>
    <inlineHelpText>1 is Low
5 is High</inlineHelpText>
    <label>Presentation Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>