force-app/main/default/objects/Executive_Profile__c/fields/Presentation_Type_Preference__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type_Preference__c</fullName>
    <label>Presentation Type Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day Lectures</fullName>
            </value>
            <value>
                <fullName>Half Day Lectures</fullName>
            </value>
            <value>
                <fullName>Evening Lectures</fullName>
            </value>
            <value>
                <fullName>Multiple Day Lectures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>