force-app/main/default/objects/Executive_Profile__c/fields/Primary_Bone_Graft_Substitute__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bone_Graft_Substitute__c</fullName>
    <label>Primary Bone Graft Substitute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puros</fullName>
            </value>
            <value>
                <fullName>Other Allograft</fullName>
            </value>
            <value>
                <fullName>Xenograft</fullName>
            </value>
            <value>
                <fullName>Synthetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>