force-app/main/default/objects/Executive_Profile__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dental Tech</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Periodontist</fullName>
            </value>
            <value>
                <fullName>Prosthodontist</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>