force-app/main/default/objects/Executive_Profile__c/fields/Provisionalization__c.field-meta.xml
<CustomField>
    <fullName>Provisionalization__c</fullName>
    <label>Provisionalization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisionalize for Aesthetics (non-occlusal loading)</fullName>
            </value>
            <value>
                <fullName>Provisionalize for immediate implant loading due to condition</fullName>
            </value>
            <value>
                <fullName>I do not provisionalize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>