force-app/main/default/objects/Executive_Profile__c/fields/Publications_Containing_Work__c.field-meta.xml
<CustomField>
    <fullName>Publications_Containing_Work__c</fullName>
    <label>Publications Containing Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IJPRD - International Journal of Periodontics &amp; Restorative Dentistry</fullName>
            </value>
            <value>
                <fullName>JOMI - International Journal of Oral &amp; Maxillofacial Implants</fullName>
            </value>
            <value>
                <fullName>JOMS - Journal of Oral &amp; Maxillofacial Surgery</fullName>
            </value>
            <value>
                <fullName>IJP - International Journal of Prosthodontics</fullName>
            </value>
            <value>
                <fullName>Compendium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>