force-app/main/default/objects/Executive_Profile__c/fields/Puros__c.field-meta.xml
<CustomField>
    <fullName>Puros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puros</label>
    <type>Checkbox</type>
</CustomField>