force-app/main/default/objects/Executive_Profile__c/fields/Regenerative__c.field-meta.xml
<CustomField>
    <fullName>Regenerative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regenerative</label>
    <type>Checkbox</type>
</CustomField>