force-app/main/default/objects/Executive_Profile__c/fields/Restorative_Case_Speaking_Interests__c.field-meta.xml
<CustomField>
    <fullName>Restorative_Case_Speaking_Interests__c</fullName>
    <label>Restorative Case Speaking Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Aesthetics</fullName>
            </value>
            <value>
                <fullName>Single Tooth</fullName>
            </value>
            <value>
                <fullName>Multiple Unit</fullName>
            </value>
            <value>
                <fullName>Full Arch</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>