force-app/main/default/objects/Executive_Profile__c/fields/School_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>School_Affiliation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School Affiliation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>