force-app/main/default/objects/Executive_Profile__c/fields/Speaking_Location_Preference__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Location_Preference__c</fullName>
    <label>Speaking Location Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regionally</fullName>
            </value>
            <value>
                <fullName>Nationally</fullName>
            </value>
            <value>
                <fullName>Internationally</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>