force-app/main/default/objects/Executive_Profile__c/fields/Surgical_Cases_to_Speak_On__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Cases_to_Speak_On__c</fullName>
    <label>Surgical Cases to Speak On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Aesthetics</fullName>
            </value>
            <value>
                <fullName>Single Tooth</fullName>
            </value>
            <value>
                <fullName>Multiple Unit</fullName>
            </value>
            <value>
                <fullName>Full Arch</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>