force-app/main/default/objects/Executive_Profile__c/fields/System_Usage__c.field-meta.xml
<CustomField>
    <fullName>System_Usage__c</fullName>
    <label>System Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer Biomet</fullName>
            </value>
            <value>
                <fullName>Nobel</fullName>
            </value>
            <value>
                <fullName>Straumann</fullName>
            </value>
            <value>
                <fullName>Astra</fullName>
            </value>
            <value>
                <fullName>Biohorizon</fullName>
            </value>
            <value>
                <fullName>Dantsply</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>