force-app/main/default/objects/Executive_Profile__c/fields/T3__c.field-meta.xml
<CustomField>
    <fullName>T3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T3</label>
    <type>Checkbox</type>
</CustomField>