force-app/main/default/objects/Executive_Profile__c/fields/Tapered_Screw_Vent__c.field-meta.xml
<CustomField>
    <fullName>Tapered_Screw_Vent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tapered Screw-Vent</label>
    <type>Checkbox</type>
</CustomField>