force-app/main/default/objects/Executive_Profile__c/fields/TM_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>TM_Use_Case__c</fullName>
    <label>TM Use Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In revision procedures</fullName>
            </value>
            <value>
                <fullName>In High-risk patients</fullName>
                <label>In high-risk patients</label>
            </value>
            <value>
                <fullName>As an optional everyday implant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>