force-app/main/default/objects/Executive_Profile__c/fields/Trabecular_Metal__c.field-meta.xml
<CustomField>
    <fullName>Trabecular_Metal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trabecular Metal</label>
    <type>Checkbox</type>
</CustomField>